# core

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  build_and_start.sh  developing_notes.md  readme.md
admin-http-api/: Cargo.toml
auth/: Cargo.toml
auth/src/: create_system_auth_key.rs  main.rs  refresh_tokens.rs  user_store.rs
auth/src/http/: mod.rs  service.rs
cli/: Cargo.toml
core/: Cargo.toml
core/src/: certificates.rs  core_config.rs  create_http_certificate.rs  create_system_user.rs  http_server.rs  main.rs
core/src/addon_manage_backends/: docker_cli.rs  mod.rs
core/src/addons/: addon_registry.rs  mod.rs
core/src/interconnects/: mod.rs
core/src/ioservices/: mod.rs
core/src/ipc/: mod.rs
core/src/registries/: addons.rs  ioservice_template.rs  mod.rs  schemas.rs
core/src/thing_interconnects/: mod.rs  thing_registry.rs
doc/: book.toml
doc/book/: continuous-integration.html  index.html  mermaid.css  mermaid.min.js  print.html  searchindex.js  searchindex.json
doc/book/cli/: build.html  clean.html  index.html  init.html  serve.html  test.html  watch.html
doc/book/for_developers/: backends.html  index.html  preprocessors.html
doc/book/format/: config.html  index.html  mathjax.html  mdbook.html  summary.html
doc/book/format/theme/: editor.html  index-hbs.html  index.html  syntax-highlighting.html
doc/book/misc/: contributors.html
doc/src/: SUMMARY.md  addons.md  architecture.md  coreservices.md  design_principles.md  index.md  metrics.md
doc/src/addons/: binding_walkthrough.md  bindings.md  ioservice.md
doc/src/architecture/: ohx_serve.md
gen_certificate/: Cargo.toml  readme.md
gen_certificate/.cargo/: config
gen_certificate/src/: config.rs  main.rs
libohx/: Cargo.toml
libohx/proto/: property.proto
libohx/src/: addon_startup_config.rs  common_config.rs  core_config.rs  discovery.rs  lib.rs  meta.rs
libohxaddon/: Cargo.toml  build.rs  readme.md
libohxaddon/proto/: addon_registration.proto  request_access_token.proto
libohxaddon/src/: addon_common_config.rs  addon_startup_config.rs  i18n.rs  lib.rs  notification.rs  schema_registry_trait.rs  users.rs
libohxaddon/src/auth/: jwt_request.rs  jwt_verify.rs  mod.rs
libohxaddon/src/config/: configurable.rs  mod.rs  watcher.rs
libohxaddon/src/discovery/: mod.rs  resolver.rs
libohxaddon/src/grpc/: addon_registration.rs  auth.rs  mod.rs
libohxaddon/tests/: i18n.rs
libohxcore/: Cargo.toml
libohxcore/src/: command.rs  common_config.rs  configurable.rs  lib.rs  property.rs
libohxcore/src/acl/: mod.rs
libohxcore/src/addon/: connection.rs
ohx-auth/: Cargo.toml
ohx-auth/src/: auth_config.rs  create_system_auth_key.rs  main.rs  refresh_tokens.rs  user_store.rs
ohx-auth/src/http/: service.rs
ohx-backup/: Cargo.toml
ohx-core/: Cargo.toml  readme.md
ohx-core/src/: errors.rs  main.rs
ohx-core/src/addons/: docker_cli.rs  management_backend.rs
ohx-core/src/ioservices/: mod.rs
ohx-core/src/notifications/: mod.rs  notification_channel_registry.rs  service.rs
ohx-core/src/thing_interconnects/: thing_registry.rs
ohx-ruleengine/: readme.md
ohx-ruleengine/src/: engine.rs  main.rs
ohx-ruleengine/src/buildin_modules/: mod.rs  schedule.rs
ohx-serve/: Cargo.toml
ohx-serve/src/: create_http_certificate.rs
ohx-serve/src/http/: service.rs
ohx_root_dir/addons/: readme.md
ohx_root_dir/addons_http/: readme.md
ohx_root_dir/backups/: .gitignore  readme.md
ohx_root_dir/certs/: readme.md
ohx_root_dir/config/: readme.md
ohx_root_dir/interconnects/: readme.md
ohx_root_dir/rules/: readme.md
ohx_root_dir/scripts/: readme.md
ohx_root_dir/things/: readme.md
ohx_root_dir/webui/: .gitignore  readme.md
ruleengine/: Cargo.toml
ruleengine/src/: main.rs  rule.rs  rule_config.rs  rules_registry.rs
scripts/: build_book.sh  deploy.sh  make_dep.sh  make_msi.bat  make_rpm.sh
serve/: Cargo.toml  readme.md
serve/src/: main.rs  serve_config.rs
serve/src/http/: mod.rs  service.rs
