[package]
name = "gen_certificate"
version = "1.0.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "Generates an SSL certificate for localhost if not existant yet"
readme = "readme.md"
homepage = "https://github.com/openhab-nodes/ohx-os/res/gen_certificate"
repository = "https://github.com/openhab-nodes/ohx-os"
keywords = ["certificate"]
categories = ["api-bindings", "network-programming", "os::unix-apis"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = {version="0.7.1",default-features=false,features=["termcolor","humantime"]}
structopt = "0.3.4"
rcgen = {version="0.7.0",features=["x509-parser"]}
chrono = "0.4.9"
x509-parser = "0.6.0"

[profile.release]
lto = true

[dev-dependencies]
tempfile = "3.1.0"
