[package]
name = "libohxcore"
version = "0.1.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "OHX is a modern smarthome solution, embracing technologies like software containers for language agnostic extensibility. Written in Rust with an extensive test suite, OHX is fast, efficient, secure and fun to work on."
readme = "../readme.md"
homepage = "https://github.com/openhab-nodes/core/libohx"
repository = "https://github.com/openhab-nodes/core"
keywords = ["smarthome","smart-home"]
categories = []
license = "MIT"
edition = "2018"

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc" ]

[badges]
is-it-maintained-open-issues = { repository = "openhab-nodes/core" }
is-it-maintained-issue-resolution = { repository = "openhab-nodes/core" }
maintenance = { status = "actively-developed" }

[dependencies]
# General
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4.8"
structopt = "0.3.2"
chrono = {version="0.4.9",features=["serde"]}
semver = {version="0.9", features=["serde"]}
snafu = "0.6.0"
strum_macros = "0.17.1"
strum = "0.17.1"

# Discovery
socket2 = {version="0.3", features=["reuseport"]}
getaddrs = {version= "0.1.0",optional=true}

# JsonSchema validation and generation
valico = "3.1.0"
schemars = "0.6.1"

# Configuration files
sha2 = "0.8.0"
inotify = "0.8.0"

# Async
futures-core =  { version = "^0.3.0"}
futures-util =  { version = "^0.3.0"}
futures-channel =  { version = "^0.3.0"}
tokio = { version = "^0.2.0", features = ["sync","net","time","signal", "rt-util","rt-core"] }
pin-project = "0.4.6"

# keys
biscuit = "0.4.1"

[dev-dependencies]
tokio = { version = "^0.2.0", features = ["sync","net","time","rt-util","rt-core","macros"] }
env_logger = {version="0.7.1",default-features=false,features=["termcolor","humantime"]}
