[package]
name = "ohx-serve"
version = "0.1.0"
authors = ["David Graeff <david.graeff@web.de>"]
description = "OHX is a modern smarthome solution, embracing technologies like software containers for language agnostic extensibility. Written in Rust with an extensive test suite, OHX is fast, efficient, secure and fun to work on."
readme = "../readme.md"
homepage = "https://github.com/openhab-nodes/core"
repository = "https://github.com/openhab-nodes/core"
keywords = ["smarthome","smart-home"]
categories = []
license = "MIT"
edition = "2018"

# Render the readme file on doc.rs
[package.metadata.docs.rs]
features = [ "external_doc" ]

[badges]
is-it-maintained-open-issues = { repository = "openhab-nodes/core" }
is-it-maintained-issue-resolution = { repository = "openhab-nodes/core" }
maintenance = { status = "actively-developed" }

[dependencies]
libohxcore = {path="../libohxcore"}

# General
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
log = "0.4.8"
env_logger = {version="0.7.1",default-features=false,features=["termcolor","humantime"]}
nix = "0.15.0"
structopt = "0.3.4"
arc-swap = "0.4.4"
snafu = "0.6.0"
semver = "0.9.0"
chrono = {version="0.4.9",features=["serde"]}

futures-core =  { version = "^0.3.0"}
futures-util =  { version = "^0.3.0"}
futures-channel =  { version = "^0.3.0"}
tokio = { version = "^0.2.0", features = ["sync","net","signal","time","rt-util","rt-core","macros"] }
pin-project = "0.4.6"
async-trait = "0.1.21"

# Web service
warp = {version="0.2.0-alpha.0", git="https://github.com/seanmonstar/warp",features=["tls"]}
crossbeam-channel = "0.3.8"
notify = "=5.0.0-pre.1"
bytes = "0.5.3"

# JsonSchema validation and generation
valico = "3.1"
schemars = "0.6"

# RPC
tonic = "0.1.0-beta.1"
